k8s/prod/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ducklake-backend-service
  labels:
    app: ducklake-backend
spec:
  selector:
    app: ducklake-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: LoadBalancer # Use LoadBalancer for external access in production
